fix: remove backdrop blur effect from navbar for improved visibility

--- a/src/components/2025/Navbar/navbar.module.scss
+++ b/src/components/2025/Navbar/navbar.module.scss
@@ -6,7 +6,7 @@
 
   background-color: rgba(255, 255, 255, 0.05); /* more transparent */
   border-bottom: 1px solid transparent;
-  backdrop-filter: blur(1px);
+  backdrop-filter: blur(0px);
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
 
